Fix column alignment in new bug modal

--- a/bzkanban.css
+++ b/bzkanban.css
@@ -254,7 +254,8 @@ body {
 .modal-footer button {
     align-self: flex-end;
 }
-#modalBug .modal-body {
+#modalBug .modal-body,
+#modalNewBug .modal-body {
     flex-direction: row;
 }
 .bug-comments {
